Bug 63685 - FILEOPEN: docx import regression: graphic is not displayed
Summary: FILEOPEN: docx import regression: graphic is not displayed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: Other All
: high major
Assignee: Miklos Vajna
URL:
Whiteboard: BSA target:4.1.0 target:4.0.4
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-04-18 13:28 UTC by Sven-Jacobi
Modified: 2013-12-16 00:34 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Regression: Word Document containing a simple Graphic (10.71 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-04-18 13:28 UTC, Sven-Jacobi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sven-Jacobi 2013-04-18 13:28:05 UTC
Created attachment 78179 [details]
Regression: Word Document containing a simple Graphic

Problem description: The attached bugdoc could be loaded within 3.6.6 without any problems. In the latest version > 4.0 LO is crashing or the graphic is not properly displayed.

In case it is not crashing, the graphic can't be seen. This is a bug, it works in 3.6.6. By using the Navigator (F5) and changing the wrap distance of the graphic to zero everything works fine. It seems that the wrapdistance (which is not set within the docx document) is somewhere filled with a wrong value.

Steps to reproduce:
1. Load the attached document..
2. crash or just don't see the graphic.
3. ....

Current behavior:

Expected behavior:

              
Operating System: All
Version: 4.1.0.0.alpha0+ Master
Last worked in: 3.6.6.2 rc
Comment 1 Thomas van der Meulen [retired] 2013-04-18 15:37:41 UTC
Thank you Sven for your bug report, I can confirm that the picture isn't shown. It doesn't chrash. 

the Picture is there if I open it with Apple Pages 4.2 

version: 4.0.3.1
os: mac osx 10.8.3
Comment 2 Sven-Jacobi 2013-04-18 18:58:13 UTC
Changed title, LO is no longer crashing... but the graphic is still not displayed.
Comment 3 Miklos Vajna 2013-04-19 14:33:49 UTC
This is caused by my 3d7e168a2a43c2414b0633379102ddb29437e75b, assign to me.
Comment 4 Commit Notification 2013-04-19 15:36:45 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a88ac708403c03d0f950f09ec29c0d5a1e5a85b4

fdo#63685 wp:inline's distT/B/L/R is in EMU's, not twips



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Miklos Vajna 2013-04-19 17:33:38 UTC
-4-0 review: https://gerrit.libreoffice.org/3485
Comment 6 Commit Notification 2013-04-19 17:52:54 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c8b7ed1d8b93a8ca8d67b67c49c2de9b12715596&h=libreoffice-4-0

fdo#63685 wp:inline's distT/B/L/R is in EMU's, not twips


It will be available in LibreOffice 4.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Sven-Jacobi 2013-04-19 18:23:17 UTC
Many thanks for this fast bugfix... We should all be aware of the emu :-) 

"1cm == 360000 emu"