fdo#63685 wp:inline's distT/B/L/R is in EMU's, not twips

Regression from 3d7e168a2a43c2414b0633379102ddb29437e75b.

Change-Id: I9ab3f9f41316a01d5a74f3e500bad7a83c8d2dca